fix(*): fix styling on mobile

--- a/app/packs/styles/base_styles.scss
+++ b/app/packs/styles/base_styles.scss
@@ -38,6 +38,7 @@ $landing-navbar-height: 63px;
 $sidebar-lg-width: 280px;
 $sidebar-width: 78px;
 $footer-height: 145px;
+$topbar-height: 57px;
 
 $roamio-text-spacing: 0.5px;
 
@@ -45,6 +46,8 @@ $trip-card-icon-size: 28px;
 $trip-card-icon-size-xl: 36px;
 
 $link-color: #0C5CD4;
+
+$navbar-icon-colour: #D3D3D3;
 
 /* Roamio Brand */
 .roamio-header, .roamio-text {
